Commencement de "ft_printf"

--- a/ft_printf_folder/Makefile
+++ b/ft_printf_folder/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/01/31 18:54:02 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/02/01 14:18:42 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,14 +17,18 @@ NAME = test_ft_printf.exe
 
 SRCS = main_test_ft_printf.c\
 	   ft_printf.c\
+	   special_char.c\
 	   colors.c\
 	   flags.c\
+	   escape.c\
 	   ft_putnbr_base.c
 
 OBJS = main_test_ft_printf.o\
 	   ft_printf.o\
+	   special_char.o\
 	   colors.o\
 	   flags.o\
+	   escape.o\
 	   ft_putnbr_base.o
 
 all: $(NAME)
