--- a/ft_printf_folder/Makefile
+++ b/ft_printf_folder/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/02/04 00:01:21 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/02/04 02:37:49 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,8 @@ SRCS = main_test_ft_printf.c\
 	   colors.c\
 	   flags.c\
 	   escape.c\
-	   ft_putnbr_base.c\
+	   add_elem.c\
+	   add_int_mai.c\
 	   error_code.c
 
 OBJS = main_test_ft_printf.o\
@@ -30,7 +31,8 @@ OBJS = main_test_ft_printf.o\
 	   colors.o\
 	   flags.o\
 	   escape.o\
-	   ft_putnbr_base.o\
+	   add_elem.o\
+	   add_int_mai.o\
 	   error_code.o
 
 all: $(NAME)
