Commencement de "ft_printf"

--- a/ft_printf_folder/Makefile
+++ b/ft_printf_folder/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/02/09 07:42:03 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/02/11 17:11:54 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,6 +25,7 @@ SRCS = main_test_ft_printf.c\
 	   escape.c\
 	   add_elem.c\
 	   length_modifier_anm.c\
+	   aux_lm_anm.c\
 	   add_nb_mai.c\
 	   error_code.c
 
@@ -38,6 +39,7 @@ OBJS = main_test_ft_printf.o\
 	   escape.o\
 	   add_elem.o\
 	   length_modifier_anm.o\
+	   aux_lm_anm.o\
 	   add_nb_mai.o\
 	   error_code.o
 
