Commencement de "ft_printf"

--- a/ft_printf_folder/Makefile
+++ b/ft_printf_folder/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/02/12 03:40:01 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/02/12 09:21:35 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,6 +25,7 @@ SRCS = main_test_ft_printf.c\
 	   escape.c\
 	   add_elem.c\
 	   global_char_format.c\
+	   unicode.c\
 	   length_modifier_anm.c\
 	   aux_lm_anm.c\
 	   specify_base.c\
@@ -42,6 +43,7 @@ OBJS = main_test_ft_printf.o\
 	   escape.o\
 	   add_elem.o\
 	   global_char_format.o\
+	   unicode.o\
 	   length_modifier_anm.o\
 	   aux_lm_anm.o\
 	   specify_base.o\
