Commencement de "ft_printf"

--- a/ft_printf_folder/Makefile
+++ b/ft_printf_folder/Makefile
@@ -77,7 +77,9 @@ fclean: clean
 re: fclean all
 
 test: re
+	rm -f main_test_ft_printf.o
 	rm -f test_ft_printf.exe
-	gcc -o test_ft_printf.exe $(CFLAGS) main_test_ft_printf.c -L./ -lftprintf -L./libft/ -lft
+	gcc -c $(CFLAGS) main_test_ft_printf.c
+	gcc -o test_ft_printf.exe -I./ -I./libft/ -L./ -L./libft main_test_ft_printf.o -lftprintf -lft
 
 .PHONY	:				all clean fclean re test
