Avancement intermediaire de "ft_printf"

--- a/projet_ft_printf/ft_printf_folder/Makefile
+++ b/projet_ft_printf/ft_printf_folder/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/03/22 01:53:41 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/04/15 14:58:50 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,50 +16,50 @@ CFLAGS	+=		-I./ -I./libft/includes/
 NAME = libftprintf.a
 
 SRCS = ./srcs_libftprintf/ft_printf.c\
-	   ./srcs_libftprintf/special_char.c\
-	   ./srcs_libftprintf/colors.c\
-	   ./srcs_libftprintf/flags.c\
-	   ./srcs_libftprintf/go_to_conv_flag.c\
-	   ./srcs_libftprintf/occurs.c\
-	   ./srcs_libftprintf/optionnal_flags.c\
-	   ./srcs_libftprintf/detect_mnoz.c\
-	   ./srcs_libftprintf/field_width_length.c\
-	   ./srcs_libftprintf/escape.c\
-	   ./srcs_libftprintf/add_elem.c\
-	   ./srcs_libftprintf/global_char_format.c\
-	   ./srcs_libftprintf/add_unicode_string_mai.c\
-	   ./srcs_libftprintf/add_unicode_char_mai.c\
-	   ./srcs_libftprintf/complete_uni_array.c\
-	   ./srcs_libftprintf/length_modifier_anm.c\
-	   ./srcs_libftprintf/aux_lm_anm.c\
-	   ./srcs_libftprintf/specify_base.c\
-	   ./srcs_libftprintf/obsolete_convers.c\
-	   ./srcs_libftprintf/add_nb_mai.c\
-	   ./srcs_libftprintf/p_padding.c\
-	   ./srcs_libftprintf/error_code.c
+	   ./srcs_libftprintf/pf_special_char.c\
+	   ./srcs_libftprintf/pf_colors.c\
+	   ./srcs_libftprintf/pf_flags.c\
+	   ./srcs_libftprintf/pf_go_to_conv_flag.c\
+	   ./srcs_libftprintf/pf_occurs.c\
+	   ./srcs_libftprintf/pf_optionnal_flags.c\
+	   ./srcs_libftprintf/pf_detect_mnoz.c\
+	   ./srcs_libftprintf/pf_field_width_length.c\
+	   ./srcs_libftprintf/pf_escape.c\
+	   ./srcs_libftprintf/pf_add_elem.c\
+	   ./srcs_libftprintf/pf_global_char_format.c\
+	   ./srcs_libftprintf/pf_add_unicode_string_mai.c\
+	   ./srcs_libftprintf/pf_add_unicode_char_mai.c\
+	   ./srcs_libftprintf/pf_complete_uni_array.c\
+	   ./srcs_libftprintf/pf_length_modifier_anm.c\
+	   ./srcs_libftprintf/pf_aux_lm_anm.c\
+	   ./srcs_libftprintf/pf_specify_base.c\
+	   ./srcs_libftprintf/pf_obsolete_convers.c\
+	   ./srcs_libftprintf/pf_add_nb_mai.c\
+	   ./srcs_libftprintf/pf_p_padding.c\
+	   ./srcs_libftprintf/pf_error_code.c
 
 OBJS = ft_printf.o\
-	   special_char.o\
-	   colors.o\
-	   flags.o\
-	   go_to_conv_flag.o\
-	   occurs.o\
-	   optionnal_flags.o\
-	   detect_mnoz.o\
-	   field_width_length.o\
-	   escape.o\
-	   add_elem.o\
-	   global_char_format.o\
-	   add_unicode_string_mai.o\
-	   add_unicode_char_mai.o\
-	   complete_uni_array.o\
-	   length_modifier_anm.o\
-	   aux_lm_anm.o\
-	   specify_base.o\
-	   obsolete_convers.o\
-	   add_nb_mai.o\
-	   p_padding.o\
-	   error_code.o
+	   pf_special_char.o\
+	   pf_colors.o\
+	   pf_flags.o\
+	   pf_go_to_conv_flag.o\
+	   pf_occurs.o\
+	   pf_optionnal_flags.o\
+	   pf_detect_mnoz.o\
+	   pf_field_width_length.o\
+	   pf_escape.o\
+	   pf_add_elem.o\
+	   pf_global_char_format.o\
+	   pf_add_unicode_string_mai.o\
+	   pf_add_unicode_char_mai.o\
+	   pf_complete_uni_array.o\
+	   pf_length_modifier_anm.o\
+	   pf_aux_lm_anm.o\
+	   pf_specify_base.o\
+	   pf_obsolete_convers.o\
+	   pf_add_nb_mai.o\
+	   pf_p_padding.o\
+	   pf_error_code.o
 
 all: $(NAME)
 
