Adaptation de l'arborescence de "ft_printf"

--- a/projet_ft_printf/Makefile
+++ b/projet_ft_printf/Makefile
@@ -6,12 +6,12 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/31 17:42:57 by lcabanes          #+#    #+#              #
-#    Updated: 2018/02/19 17:13:22 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/04/15 18:37:56 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CFLAGS	+=		-Wall -Wextra -Werror
-CFLAGS	+=		-I./ft_printf_folder/ -I./ft_printf_folder/libft/includes/
+CFLAGS	+=		-I./libftprintf/includes/
 
 NAME = test_ft_printf.exe
 
@@ -22,16 +22,16 @@ OBJS = main_test_ft_printf.o
 all: $(NAME)
 
 $(NAME):
-	@make -C ./ft_printf_folder/ all
+	@make -C ./libftprintf/ all
 	gcc -c $(CFLAGS) $(SRCS)
-	gcc -o $(NAME) $(CFLAGS) -L./ft_printf_folder/ -L./ft_printf_folder/libft/ $(OBJS) -lftprintf -lft
+	gcc -o $(NAME) $(CFLAGS) -L./libftprintf/ $(OBJS) -lftprintf
 
 clean:
-	@make -C ./ft_printf_folder/ clean
+	@make -C ./libftprintf/ clean
 	rm -f $(OBJS)
 
 fclean: clean
-	@make -C ./ft_printf_folder/ fclean
+	@make -C ./libftprintf/ fclean
 	rm -f $(NAME)
 
 re: fclean all
