Avancement intermediaire de "ft_printf"

--- a/projet_ft_printf/libftprintf/Makefile
+++ b/projet_ft_printf/libftprintf/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2018/07/18 10:24:35 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/07/18 10:35:53 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -91,7 +91,8 @@ SRCS = ./srcs_libft/ft_memset.c\
 		\
 		./srcs_libftprintf/ft_printf.c\
 		./srcs_libftprintf/pf_check.c\
-		./srcs_libftprintf/pf_color.c
+		./srcs_libftprintf/pf_color.c\
+		./srcs_libftprintf/pf_convers.c
 
 OBJS = ft_memset.o\
 		ft_bzero.o\
@@ -169,7 +170,8 @@ OBJS = ft_memset.o\
 		\
 		ft_printf.o\
 		pf_check.o\
-		pf_color.o
+		pf_color.o\
+		pf_convers.o
 
 all: $(NAME)
 
