--- a/projet_ft_printf/libftprintf/Makefile
+++ b/projet_ft_printf/libftprintf/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2018/07/18 11:55:56 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/07/18 14:17:23 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -92,7 +92,8 @@ SRCS = ./srcs_libft/ft_memset.c\
 		./srcs_libftprintf/ft_printf.c\
 		./srcs_libftprintf/pf_check.c\
 		./srcs_libftprintf/pf_color.c\
-		./srcs_libftprintf/pf_convers.c
+		./srcs_libftprintf/pf_convers.c\
+		./srcs_libftprintf/pf_get_flags_prec_spac.c
 
 OBJS = ft_memset.o\
 		ft_bzero.o\
@@ -171,7 +172,8 @@ OBJS = ft_memset.o\
 		ft_printf.o\
 		pf_check.o\
 		pf_color.o\
-		pf_convers.o
+		pf_convers.o\
+		pf_get_flags_prec_spac.o
 
 all: $(NAME)
 
