Avancement intermediaire de "ft_printf"

--- a/projet_ft_printf/libftprintf/Makefile
+++ b/projet_ft_printf/libftprintf/Makefile
@@ -94,7 +94,12 @@ SRCS = ./srcs_libft/ft_memset.c\
 		./srcs_libftprintf/pf_color.c\
 		./srcs_libftprintf/pf_convers.c\
 		./srcs_libftprintf/pf_get_prec_and_spac.c\
-		./srcs_libftprintf/pf_is_flag_present.c
+		./srcs_libftprintf/pf_is_flag_present.c\
+		./srcs_libftprintf/pf_characters_convers.c\
+		./srcs_libftprintf/pf_deal_characters_flags.c\
+		./srcs_libftprintf/pf_signed_convers.c\
+		./srcs_libftprintf/pf_unsigned_convers.c\
+		./srcs_libftprintf/pf_anticipate_sharp_mark.c
 
 OBJS = ft_memset.o\
 		ft_bzero.o\
@@ -175,11 +180,16 @@ OBJS = ft_memset.o\
 		pf_color.o\
 		pf_convers.o\
 		pf_get_prec_and_spac.o\
-		pf_is_flag_present.o
+		pf_is_flag_present.o\
+		pf_characters_convers.o\
+		pf_deal_characters_flags.o\
+		pf_signed_convers.o\
+		pf_unsigned_convers.o\
+		pf_anticipate_sharp_mark.o
 
 all: $(NAME)
 
-$(NAME):
+$(NAME): $(SRCS)
 	gcc -c $(CFLAGS) $(SRCS)
 	ar rc $(NAME) $(OBJS)
 	ranlib $(NAME)
