Reprise de "push_swap"

--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2018/02/28 18:28:58 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/09/17 14:56:55 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,37 +16,44 @@ CFLAGS	+=		-I./ -I./libft/includes/
 NAME = test_push_swap.exe
 
 SRCS = main_test_push_swap.c\
+		./srcs_push_swap/main_checker.c\
+		\
 		./srcs_push_swap/ft_ps_swap.c\
 		./srcs_push_swap/ft_ps_rotate.c\
 		./srcs_push_swap/ft_ps_push.c\
 		./srcs_push_swap/ft_ps_reverse_rotate.c\
 		./srcs_push_swap/ft_ps_display_stacks.c\
 		./srcs_push_swap/ft_ps_initialize_stacks.c\
-		./srcs_push_swap/ft_ps_add_elem.c
+		./srcs_push_swap/ft_ps_add_elem.c\
+		./srcs_push_swap/ft_ps_parse.c
 
-OBJS = main_test_push_swap.o\
-		ft_ps_swap.o\
+OBJS = ft_ps_swap.o\
 		ft_ps_rotate.o\
 		ft_ps_push.o\
 		ft_ps_reverse_rotate.o\
 		ft_ps_display_stacks.o\
 		ft_ps_initialize_stacks.o\
-		ft_ps_add_elem.o
+		ft_ps_add_elem.o\
+		ft_ps_parse.o
 
 all: $(NAME)
 
 $(NAME):
 	@make -C ./libft/ all
 	gcc -c $(CFLAGS) $(SRCS)
-	gcc -o $(NAME) $(CFLAGS) -L./libft/ $(OBJS) -lft
+	gcc -o $(NAME) $(CFLAGS) -L./libft/ main_test_push_swap.o $(OBJS) -lft
+	gcc -o checker $(CFLAGS) -L./libft/ main_checker.o $(OBJS) -lft
 
 clean:
 	@make -C ./libft/ clean
+	rm -f main_test_push_swap.o
+	rm -f main_checker.o
 	rm -f $(OBJS)
 
 fclean: clean
 	@make -C ./libft/ fclean
 	rm -f $(NAME)
+	rm -f checker
 
 re: fclean all
 
