--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2018/10/09 07:28:15 by lcabanes         ###   ########.fr        #
+#    Updated: 2018/10/11 17:16:02 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,6 +28,8 @@ SRCS = main_test_push_swap.c\
 		./srcs_push_swap/ft_ps_parse_parameters.c\
 		./srcs_push_swap/ft_ps_apply_moves.c\
 		./srcs_push_swap/ft_ps_get_ref.c\
+		./srcs_push_swap/ft_ps_check_doublons.c\
+		./srcs_push_swap/ft_ps_check_order.c\
 		./srcs_push_swap/ft_ps_free.c
 
 OBJS = ft_ps_swap.o\
@@ -40,6 +42,8 @@ OBJS = ft_ps_swap.o\
 		ft_ps_parse_parameters.o\
 		ft_ps_apply_moves.o\
 		ft_ps_get_ref.o\
+		ft_ps_check_doublons.o\
+		ft_ps_check_order.o\
 		ft_ps_free.o
 
 all: $(NAME)
