Renouveau de "projet_push_swap"

--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,16 +6,19 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/01/16 19:51:23 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/01/19 01:49:10 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CFLAGS	+=		-Wall -Wextra -Werror
 CFLAGS	+=		-I./ -I./libft/includes/
 
+HEAD = push_swap.h
+
 NAME = push_swap
 
 SRCS =	./srcs_push_swap/main_push_swap.c\
+		./srcs_push_swap/main_checker.c\
 		\
 		./srcs_push_swap/ft_swap.c\
 		./srcs_push_swap/ft_rotate.c\
@@ -24,7 +27,8 @@ SRCS =	./srcs_push_swap/main_push_swap.c\
 		./srcs_push_swap/ps_parse.c\
 		./srcs_push_swap/ps_display_error.c\
 		./srcs_push_swap/ps_display_stacks.c\
-		./srcs_push_swap/ps_sort.c
+		./srcs_push_swap/ps_sort.c\
+		./srcs_push_swap/ps_get_input.c
 
 OBJS =	ft_swap.o\
 		ft_rotate.o\
@@ -33,20 +37,21 @@ OBJS =	ft_swap.o\
 		ps_parse.o\
 		ps_display_error.o\
 		ps_display_stacks.o\
-		ps_sort.o
+		ps_sort.o\
+		ps_get_input.o
 
 all: $(NAME)
 
-$(NAME):
+$(NAME): $(SRCS) $(HEAD)
 	@make -C ./libft/ all
 	gcc -c $(CFLAGS) $(SRCS)
 	gcc -o $(NAME) $(CFLAGS) -L./libft/ main_push_swap.o $(OBJS) -lft
-#	gcc -o checker $(CFLAGS) -L./libft/ main_checker.o $(OBJS) -lft
+	gcc -o checker $(CFLAGS) -L./libft/ main_checker.o $(OBJS) -lft
 
 clean:
 	@make -C ./libft/ clean
 	rm -f main_push_swap.o
-#	rm -f main_checker.o
+	rm -f main_checker.o
 	rm -f $(OBJS)
 
 fclean: clean
