--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/01/19 03:24:31 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/01/23 12:54:11 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,6 +30,7 @@ SRCS =	./srcs_push_swap/main_push_swap.c\
 		./srcs_push_swap/ps_sort.c\
 		./srcs_push_swap/ps_get_input.c\
 		./srcs_push_swap/ps_apply_moves.c\
+		./srcs_push_swap/ps_gotta_push.c\
 		./srcs_push_swap/ps_is_ready_to_go.c
 
 OBJS =	ft_swap.o\
@@ -42,6 +43,7 @@ OBJS =	ft_swap.o\
 		ps_sort.o\
 		ps_get_input.o\
 		ps_apply_moves.o\
+		ps_gotta_push.o\
 		ps_is_ready_to_go.o
 
 all: $(NAME)
