--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/02/09 15:09:55 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/02/21 09:16:18 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,6 +30,7 @@ SRCS =	./srcs_push_swap/main_push_swap.c\
 		./srcs_push_swap/ps_sort_three.c\
 		./srcs_push_swap/ps_sort_five.c\
 		./srcs_push_swap/ps_sort_power_two.c\
+		./srcs_push_swap/ps_position.c\
 		./srcs_push_swap/ps_get_input.c\
 		./srcs_push_swap/ps_apply_moves.c\
 		./srcs_push_swap/ps_gotta_push.c\
@@ -46,6 +47,7 @@ OBJS =	ft_swap.o\
 		ps_sort_three.o\
 		ps_sort_five.o\
 		ps_sort_power_two.o\
+		ps_position.o\
 		ps_get_input.o\
 		ps_apply_moves.o\
 		ps_gotta_push.o\
