--- a/projet_push_swap/Makefile
+++ b/projet_push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/02/21 09:16:18 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/02/21 11:48:56 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,7 +35,8 @@ SRCS =	./srcs_push_swap/main_push_swap.c\
 		./srcs_push_swap/ps_apply_moves.c\
 		./srcs_push_swap/ps_gotta_push.c\
 		./srcs_push_swap/ps_is_ready_to_go.c\
-		./srcs_push_swap/ps_get_options.c
+		./srcs_push_swap/ps_get_options.c\
+		./srcs_push_swap/ps_print_register.c
 
 OBJS =	ft_swap.o\
 		ft_rotate.o\
@@ -52,7 +53,8 @@ OBJS =	ft_swap.o\
 		ps_apply_moves.o\
 		ps_gotta_push.o\
 		ps_is_ready_to_go.o\
-		ps_get_options.o
+		ps_get_options.o\
+		ps_print_register.o
 
 all: $(NAME)
 
